6857661: 64-bit server VM: assert(is_Initialize(),"invalid node class")

Move the secondary raw memory barrier to the correct place in generate_arraycopy().

Reviewed-by: never